Issue #6884 (More code cleanup)